# hafs

./: .gitignore  AFS_POLICY_MANAGEMENT.md  AGENTS.md  AGENTS_QUICKSTART.md  ARCHITECTURE.md  AUTONOMOUS_TRAINING_README.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  NIGHT_AGENTS_STATUS.md  PLUGIN_SETUP_COMPLETE.md  README.md  SLEEP_WELL.md  STATUS_REPORT.md  check_providers.py  hafs.toml  metadata.json  pyproject.toml  run_distributed_campaign.py  stats.json  test_agents_import.py  test_alpha_pilot.py  test_quality_bug.py
.github/workflows/: ci-ai.yml
apps/studio/: CMakeLists.txt  README.md
apps/studio/src/: app.cc  app.h  data_loader.cc  data_loader.h  main.cc
apps/studio/src/core/: assets.cc  assets.h  context.cc  context.h  deployment_actions.cc  deployment_actions.h  filesystem.cc  filesystem.h  logger.cc  logger.h  registry_reader.cc  registry_reader.h  training_monitor.cc  training_monitor.h
apps/studio/src/models/: state.h
apps/studio/src/themes/: hafs_theme.h
apps/studio/src/ui/: core.cc  core.h  shortcuts.cc  shortcuts.h
apps/studio/src/ui/charts/: chart.h  coverage_density.cc  coverage_density.h  generator_efficiency.cc  generator_efficiency.h  quality_trends.cc  quality_trends.h
apps/studio/src/ui/components/: charts.cc  charts.h  comparison_view.cc  deployment_panel.cc  deployment_panel.h  metrics.cc  model_registry.cc  model_registry.h  panels.cc  panels.h  tabs.cc  tabs.h  training_dashboard.cc  training_dashboard.h
apps/studio/src/ui/panels/: chat_panel.cc  chat_panel.h
apps/studio/src/widgets/: imgui_memory_editor.h  sample_review.cc  sample_review.h  training_status.cpp
cc/: CMakeLists.txt
cc/include/hafs/: similarity.h
cc/src/: batch_ops.cc  bindings.cc  similarity.cc
config/: README.md  agent_personalities.toml  cognitive_protocol.toml  lsp.toml  prompt_templates.toml  prompts.toml  sync.toml.example  training.toml  training_medical_mechanica.toml  training_medical_mechanica.toml.example  website_monitoring_agents.toml  website_monitoring_agents.toml.example  windows_background_agents.toml  windows_background_agents.toml.example  windows_filesystem_agents.toml  windows_filesystem_agents.toml.example
data/: rejection_summary.json  training_reference_examples.json
docs/: AFS_POLICY_MANAGEMENT.md  AGENTS_QUICKSTART.md  AGENT_REFERENCE.md  ARCHITECTURE.md  CHAT_MODE_RENDERER_PLAN.md  CHAT_OVERHAUL_PLAN.md  CODE_CONSOLIDATION_PLAN.md  COGNITIVE_PROTOCOL.md  COGNITIVE_PROTOCOL_v0.3.md  CONFIGURATION.md  IMPROVEMENTS.md  KB_TODO_ITEMS_1_2_3.md  KNOWLEDGE_BASE_TODOS.md  PLUGIN_ADAPTER_GUIDE.md  PLUGIN_AGENT_ADAPTATION_GUIDE.md  PLUGIN_DEVELOPMENT.md  README.md  SPRINT5_SUMMARY.md  SWARM_MISSIONS.md  SWARM_USAGE.md  USAGE.md  agents.md  infra_roadmap.md  llamacpp_usage.md  ml_visualization_implementation.md  native-similarity.md  project_history_analysis.md  training_monitoring.md
docs/architecture/: AFS_LIVE_SOURCE_PLAN.md  ARCHITECTURE.md  COGNITIVE_PROTOCOL.md  MOE_SYSTEM.md  PROVIDERS.md  SPRINT5_ARCHITECTURE_DIAGRAM.md  TRAINING_SNAPSHOT_SCHEMA.md
docs/backlog/: KB_TODO_ITEMS_1_2_3.md
docs/config/: model_registry.toml  routing.toml
docs/guides/: AGENTIC_SYSTEM_GUIDE.md  AGENTS_QUICKSTART.md  AGENT_MESSAGE_DELIVERY.md  AGENT_MESSAGE_ROUTING.md  (+15 more)
examples/: multi_agent_example.py
native/: CMakeLists.txt
native/common/: simd_utils.h
native/io/: json_loader.h
native/similarity/: batch_ops.cc  similarity.cc
scripts/: HAFS_LSP_README.md  INSTALLATION_SUMMARY.md  QUICK_REFERENCE.txt  TRAINING_ENV_INDEX.md  TRAINING_SETUP_README.md  analyze_gemini_history.py  analyze_rejected_samples.py  analyze_sample_sources.py  check_providers.py  check_zelda3_files.py  cleanup_embeddings.py  commit_refactor.sh  configure_ollama_d_drive.ps1  create_fine_tuned_model.sh  deep_history_analysis.py  deploy_training_medical_mechanica.sh  dev_hafs.sh  embedding_cli.py  evaluate_model.sh  example_unsloth_training.py  generate_oracle_dataset.py  generate_oracle_hybrid.py  hafs_lsp_control.sh  improve_context_loop.py  install_all_models.ps1  install_training.bat  install_training_env.ps1  install_zsh_completion.sh  launch_autonomous_training.sh  launch_hybrid_training.sh  launch_night_agents.sh  launch_training.py  launch_web_hub.sh  presubmit_training.sh  quick_gpu_test.py  quick_model_test.sh  rebuild_hafs.sh  remote_install_training.sh  run_ab_test.py  run_aggressive_pilot.py  (+39 more)
src/cc/: CMakeLists.txt  Makefile  cmake_install.cmake  hafs_viz
src/cc/bindings/: main_bindings.cc
src/cc/common/: types.h
src/cc/index/: hnsw_index.cc  hnsw_index.h
src/cc/io/: json_loader.cc
src/cc/quantize/: int8_ops.h  quantize.cc  quantize.h
src/cc/similarity/: similarity.h
src/cc/stream/: streaming_index.cc  streaming_index.h
src/cc/viz/: app.cc  app.h  data_loader.cc  data_loader.h  main.cc
src/cc/viz/themes/: hafs_theme.h
src/cc/viz/ui/: core.h  shortcuts.cc
src/cc/viz/ui/components/: charts.h  metrics.h  panels.cc  tabs.cc  tabs.h
src/cc/viz/widgets/: imgui_memory_editor.h  text_editor.cc  text_editor.h  training_status.h
tests/: __init__.py  run_fast_pilot.py  run_minimal_pilot.py  run_validation_pilot.py  test_afs_scaffold.py  test_agents.py  test_ai_ci_scaffold.py  test_backends_registry.py  test_cli.py  test_cli_refinement.py  test_consolidation_agents.py  test_consolidation_analysis.py  test_consolidation_autonomy.py  test_consolidation_knowledge.py  test_consolidation_mission.py  test_consolidation_pipeline.py  test_consolidation_swarm.py  test_consolidation_utility.py  test_context_and_policy.py  test_core_architecture.py  test_core_systems.py  test_debug.py  test_deep_context_pipeline.py  test_embedding_daemon.py  test_epistemic_summary.py  test_fears.py  test_fears_scoring.py  test_file_ops.py  test_genai_compat.py  test_genai_integration.py  test_generate_samples.py  test_goals.py  test_goals_compat.py  test_halext_nodes.py  test_json_utils.py  test_knowledge_pipeline.py  test_llamacpp_cli.py  test_metacognition.py  test_metacognition_compat.py  test_minimal_setup.py  (+15 more)
tools/: AFS_GUIDE.md  build_mlb_from_symbols.py  ctx
(+775 files in other folders)
