[project]
name = "hafs"
version = "0.1.0"
description = "Halext Agentic File System - AFS context manager with TUI"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "scawful"}
]
keywords = ["tui", "afs", "context", "ai", "gemini", "claude", "halext"]

dependencies = [
    "textual>=0.89.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "textual-dev>=1.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
hafs = "hafs.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hafs"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
